rework overview, chain of thought and prompt playground

--- a/installation.mdx
+++ b/installation.mdx
@@ -5,11 +5,13 @@ title: Installation
 Chainlit requires `python>=3.8`.
 
 Open a terminal and run:
+
 ```bash
 pip install chainlit
 ```
 
 Make sure everything runs smoothly:
+
 ```bash
 chainlit hello
 ```
@@ -19,10 +21,10 @@ This should spawn the chainlit UI and ask for your name like so:
 
 ## Next steps
 
-<Card title="With LangChain" icon="link" href="/langchain">
-  Learn on how to use Chainlit with LangChain.
+<Card title="In PurePython" icon="link" href="/pure-python">
+  Learn on how to use Chainlit with any python code.
 </Card>
 
-<Card title="With PurePython" icon="link" href="/pure-python">
-  Learn on how to use Chainlit with any python code.
+<Card title="With LangChain" icon="link" href="/langchain">
+  Learn on how to use Chainlit with LangChain.
 </Card>
