--- a/overview.mdx
+++ b/overview.mdx
@@ -2,20 +2,28 @@
 title: "Chainlit - Overview"
 ---
 
-Chainlit is an open-source Python package that focuses on making it incredibly easy to create chatbot user interfaces on top of any Python code (including LangChain).
-
+Chainlit is an open-source Python package that makes it incredibly fast to build and share LLM apps.
 
 ## Advantages of Chainlit
-1. **Chatbot UI:** Create cool LLM-based chatbot apps directly from your python code!
 
-2. **Enhanced explainability:** Chainlit's user interface enables you to visualize intermediary steps, enabling you to understand the reasoning behind an answer.
+1. [Build fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
 
-3. **Debugging made easy:** Chainlit's prompt playground allows you to iterate on intermediate prompts, making it easier to identify and fix bugs.
+2. [Visualize:](/concepts/chain-of-thought) Understand the intermediary steps that produced the final output at a glance
 
-4. **Plug and play integration with LangChain:** Turn your LangChain agent in a chatbot UI with one line of code.
+3. [Debug:](/concepts/prompt-playground) Deep dive into prompts in the Prompt Playground to understand where things went wrong
 
-5. **Seamless file management:** The package includes a set of functions to ask and send files or documents.
+4. [Collaborate:](/cloud/create-project) Invite your teammates, create annotated datasets and run experiments together
 
-6. **Deployment (coming soon):** Chainlit offers simple & free deployment, allowing you to quickly and easily share your AI applications with your team or the world.
+5. [Share:](/cloud/deploy) Publish your LLM app and share it with the world (coming soon)
 
-7. **Improved team collaboration (coming soon):** Chainlit's features, such as data persistence, human feedback, and prompt versioning, enable your team to work together more effectively and efficiently.
+## Integrations
+
+Chainlit is compatible with all Python programs and libraries. That being said, it comes with a set of integrations with popular libraries and frameworks.
+
+<Card title="LangChain Integration" icon="link" href="/langchain">
+  Learn how to use any LangChain agent with Chainlit.
+</Card>
+
+<Card title="LangChain MRKL with Chainlit" icon="link" href="/examples/mrkl">
+  Learn how to turn the LangChain miracle (MRKL) agent into an Chainlit app.
+</Card>
