--- a/pure-python.mdx
+++ b/pure-python.mdx
@@ -1,5 +1,5 @@
 ---
-title: With Pure Python
+title: In Pure Python
 ---
 
 Chainlit turns your python code into a chatbot UI in a few lines of code.
@@ -29,5 +29,5 @@ Congratulations, your first chainlit app is ready 🥳
 ![PythonExample](/images/python-example.png)
 
 <Card title="Deployment" icon="link" href="/cloud/deploy">
-   Learn how to deploy your agent to the cloud.
+  Learn how to deploy your agent to the cloud.
 </Card>
