rework get started section and chain of thougth + prompt playground

--- a/cloud/create-project.mdx
+++ b/cloud/create-project.mdx
@@ -2,6 +2,10 @@
 title: Get started
 ---
 
+<Note>
+  The cloud features are in alpha and might break or change in the future!
+</Note>
+
 Chainlit Cloud allows you to:
 
 - Add authentication to your application
