--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -2,7 +2,11 @@
 title: Text to SQL
 ---
 
-Let's build a simple agent that helps users to create SQL queries with natural language.
+Let's build a simple app that helps users to create SQL queries with natural language.
+
+<Frame caption="Preview of the final result">
+  <img src="/images/text-to-sql.png" />
+</Frame>
 
 ## Prerequisites
 
