--- a/installation.mdx
+++ b/installation.mdx
@@ -4,11 +4,13 @@ title: Installation
 
 Chainlit requires `python>=3.8`.
 
-Open a terminal and run:
+You can install Chainlit it via pip as follows:
 
 ```bash
 pip install chainlit
 ```
+
+This will make the `chainlit` command available on your system.
 
 Make sure everything runs smoothly:
 
