--- a/concepts/actions.mdx
+++ b/concepts/actions.mdx
@@ -2,12 +2,12 @@
 title: "Actions"
 ---
 
-Sometimes, you may want to make your app more interactive by allowing users to perform actions. For example, you may want to allow users to generate a variant of an image your app previously generated.
+Sometimes, you may want to make your app more interactive by allowing users to perform actions.
+
+The `Action` class enables you to send clickable buttons to the user interface and declare callbacks for when the user clicks on them.
 
 <Card title="Action API" icon="link" href="/api-reference/action">
   Learn how to send actions to the user interface.
 </Card>
-
-Chainlit lets you send clickable buttons to the user interface and declare callbacks for when the user clicks on them.
 
 ![Action](/images/action.png)
