--- a/langchain.mdx
+++ b/langchain.mdx
@@ -2,12 +2,29 @@
 title: With LangChain
 ---
 
-Chainlit seamlessly integrates with LangChain to create a chatbot UI in seconds.
+In this tutorial, we'll walk through the steps to create a Chainlit application integrated with [LangChain](https://github.com/hwchase17/langchain).
 
-```python app.py
+## Prerequisites
+
+Before getting started, make sure you have the following:
+
+- A working installation of Chainlit
+- The LangChain package installed
+- An OpenAI API key
+- Basic understanding of Python programming
+
+## Step 1: Create a Python file
+
+Create a new Python file named `app.py` in your project directory. This file will contain the main logic for your LLM application.
+
+## Step 2: Write the Application Logic
+
+In `app.py`, import the necessary packages and define a factory function decorated with [@cl.langchain_factory](/api-reference/langchain/langchain-factory) that returns any LangChain instance. In this tutorial, we are going to use `LLMChain` to keep it simple. Here's the basic structure of the script:
+
+```python
+import os
 from langchain import PromptTemplate, OpenAI, LLMChain
 import chainlit as cl
-import os
 
 os.environ["OPENAI_API_KEY"] = "YOUR_OPEN_AI_API_KEY"
 
@@ -23,19 +40,37 @@ def factory():
     return llm_chain
 ```
 
-That's it. Run the following command to start the chatbot UI.
+This function sets up an instance of `LLMChain` with a custom `PromptTemplate`. The `LLMChain` is responsible for generating responses based on the input provided by users.
+
+Behind the scenes, Chainlit takes care of:
+
+- Websocket connections
+- Instantiating one LangChain instance per user session
+- Running the LangChain instance on user input
+- Sending the output of the LangChain instance back to the user
+
+## Step 3: Run the Application
+
+To start your LLM app, open a terminal and navigate to the directory containing `app.py`. Then run the following command:
 
 ```bash
 chainlit run app.py -w
 ```
 
-Congratulations, your first chainlit app is ready 🥳
+The `-w` flag tells Chainlit to enable auto-reloading, so you don't need to restart the server every time you make changes to your application. Your chatbot UI should now be accessible at http://localhost:8000.
 
 ![LangChainExample](/images/langchain-example.png)
 
-<Warning>When using LangChain, caching is turned on by default! The cache lives in the .chainlit folder.</Warning>
+<Warning>
+  When using LangChain, prompts and completions are cached locally! The cache
+  lives in the .chainlit folder.
+</Warning>
 
+## Next Steps
 
-<Card title="Deployment" icon="link" href="/cloud/deploy">
-   Learn how to deploy your agent to the cloud.
-</Card>
+Congratulations! You've just created your first LLM app with Chainlit and LangChain. From here, you can:
+
+- Learn more about the [LangChain integration](/api-reference/langchain)
+- Add [elements](/concepts/elements) and [actions](/concepts/actions) to create a more sophisticated app
+
+Happy coding! 🎉
