--- a/overview.mdx
+++ b/overview.mdx
@@ -8,17 +8,17 @@ Chainlit is an open-source Python package that makes it incredibly fast to build
   <img src="/images/overview.gif" />
 </Frame>
 
-## Advantages of Chainlit
+## Key features
 
-1. [Build fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
+1. [Build LLM Apps fast:](/examples/openai-sql) Integrate seamlessly with an existing code base or start from scratch in minutes
 
-2. [Visualize:](/concepts/chain-of-thought) Understand the intermediary steps that produced an output at a glance
+2. [Visualize multi-steps reasoning:](/concepts/chain-of-thought) Understand the intermediary steps that produced an output at a glance
 
-3. [Debug:](/concepts/prompt-playground) Deep dive into prompts in the Prompt Playground to understand where things went wrong and iterate
+3. [Iterate on prompts:](/concepts/prompt-playground) Deep dive into prompts in the Prompt Playground to understand where things went wrong and iterate
 
-4. [Collaborate:](/cloud/create-project) Invite your teammates, create annotated datasets and run experiments together
+4. [Collaborate with teammates:](/cloud/create-project) Invite your teammates, create annotated datasets and run experiments together
 
-5. [Share:](/cloud/deploy) Publish your LLM app and share it with the world (coming soon)
+5. [Share your app:](/cloud/deploy) Publish your LLM app and share it with the world (coming soon)
 
 ## Integrations
 
