--- a/concepts/env-variables.mdx
+++ b/concepts/env-variables.mdx
@@ -13,10 +13,10 @@ PINECONE_API_KEY=...
 
 ## Public Apps & Environment Variables
 
-If you want to share your agent to a broader audience, you should not put your own OpenAI API keys in the `.env` file.
+If you want to share your app to a broader audience, you should not put your own OpenAI API keys in the `.env` file.
 Instead, you should use [user_env](/cloud/config) in the Chainlit config to ask each user to provide their own keys.
 
-You can then access the user's keys in your agent code using:
+You can then access the user's keys in your code using:
 
 ```python
 from chainlit import user_session
