--- a/overview.mdx
+++ b/overview.mdx
@@ -2,7 +2,7 @@
 title: "Overview"
 ---
 
-Chainlit is an open-source Python package that makes it incredibly fast to build and share LLM apps.
+Chainlit is an open-source Python package that makes it incredibly fast to build and share LLM apps. Integrate the Chainlit API in your existing code to spawn a ChatGPT-like interface in minutes!
 
 <Frame caption="Demo of the image gen app available in the chainlit cookbook repo.">
   <img src="/images/overview.gif" />
