update action doc

--- a/api-reference/action.mdx
+++ b/api-reference/action.mdx
@@ -7,8 +7,7 @@ The `Action` class is designed to create and manage actions to be sent and displ
 ### Parameters
 
 <ParamField path="name" type="str">
-  The unique identifier for the action, used to reference the action within the
-  chatbot.
+  Name of the action, this should be used in the action_callback
 </ParamField>
 
 <ParamField path="value" type="str">
@@ -16,14 +15,14 @@ The `Action` class is designed to create and manage actions to be sent and displ
   multiple actions with the same name.
 </ParamField>
 
-<ParamField path="description" type="str" optional>
-  A short, descriptive text for the action, used to provide additional
-  information about the action to the user.
+<ParamField path="label" type="str" optional>
+  The label of the action. This is what the user will see. If not provided the
+  name will be used.
 </ParamField>
 
-<ParamField path="forId" type="str" optional>
-  The optional target element identifier to which the action is bound. You
-  should not use this parameter.
+<ParamField path="description" type="str" optional>
+  The description of the action. This is what the user will see when they hover
+  the action.
 </ParamField>
 
 ### Usage
