--- a/concepts/streaming/python.mdx
+++ b/concepts/streaming/python.mdx
@@ -5,9 +5,10 @@ title: Python Streaming
 Chainlit supports streaming with any Python code. Here is an example with `openai`.
 
 ## OpenAI Completion
-```python Code Example
+
+````python Code Example
 import openai
-from chainlit import on_message, start_stream, send_token, send_message, LLMSettings
+import chainlit as cl
 
 openai.api_key = "YOUR_API_KEY"
 
@@ -19,7 +20,7 @@ settings = {
     "top_p": 1,
     "frequency_penalty": 0,
     "presence_penalty": 0,
-    "stop": ["```"]
+    "stop": ["```"],
 }
 
 prompt = """Answer the following question:
@@ -27,29 +28,26 @@ prompt = """Answer the following question:
 """
 
 
-@on_message
+@cl.on_message
 def main(message: str):
-    msg = ""
     fromatted_prompt = prompt.format(question=message)
-    start_stream()
-
-    for resp in openai.Completion.create(model=model_name,
-                                         prompt=fromatted_prompt,
-                                         stream=True,
-                                         **settings):
-        token = resp.choices[0].text
-        send_token(token)
-        msg += token
-
-    send_message(
-        content=msg,
+    msg = cl.Message(
+        content="",
         prompt=fromatted_prompt,
-        llm_settings=LLMSettings(model_name=model_name, **settings),
-        end_stream=True
+        llm_settings=cl.LLMSettings(model_name=model_name, **settings),
     )
-```
+
+    for resp in openai.Completion.create(
+        model=model_name, prompt=fromatted_prompt, stream=True, **settings
+    ):
+        token = resp.choices[0].text
+        msg.stream_token(token)
+
+    msg.send()
+````
 
 ## OpenAI Chat Completion
+
 ```python Code Example
 import openai
 import chainlit as cl
@@ -62,7 +60,7 @@ settings = {
     "max_tokens": 500,
     "top_p": 1,
     "frequency_penalty": 0,
-    "presence_penalty": 0
+    "presence_penalty": 0,
 }
 
 
@@ -70,42 +68,24 @@ settings = {
 def start_chat():
     cl.user_session.set(
         "message_history",
-        [
-            {"role": "system", "content": "You are a helpful assistant."}
-        ]
+        [{"role": "system", "content": "You are a helpful assistant."}],
     )
-
-
-def generate_response(message: str):
-    message_history = cl.user_session.get("message_history")
-    message_history.append({"role": "user", "content": message})
-
-    cl.start_stream()
-
-    response = openai.ChatCompletion.create(
-        model=model_name,
-        messages=message_history,
-        stream=True,
-        **settings
-
-    )
-    response_text = ""
-    for resp in response:
-        token = resp.choices[0]['delta'].get("content", "")
-        cl.send_token(token)
-        response_text += token
-
-    message_history.append({"role": "assistant", "content": response_text})
-    return response_text
 
 
 @cl.on_message
 def main(message: str):
-    response_content = generate_response(message)
+    message_history = cl.user_session.get("message_history")
+    message_history.append({"role": "user", "content": message})
 
-    cl.send_message(
-        content=response_content,
-        end_stream=True,
+    msg = cl.Message(content="")
+
+    response = openai.ChatCompletion.create(
+        model=model_name, messages=message_history, stream=True, **settings
     )
-```
+    for resp in response:
+        token = resp.choices[0]["delta"].get("content", "")
+        msg.stream_token(token)
 
+    message_history.append({"role": "assistant", "content": msg.content})
+    msg.send()
+```
