--- a/api-reference/on-chat-start.mdx
+++ b/api-reference/on-chat-start.mdx
@@ -4,17 +4,17 @@ title: "on_chat_start"
 
 Hook to react to the user websocket connection event.
 
-<RequestExample>
+### Usage
+
 ```python Code Example
-from chainlit import send_message, ask_for_input, on_chat_start
+from chainlit import AskUserMessage, Message, on_chat_start
 
 
 @on_chat_start
 def main():
-    res = ask_for_input(content="What is your name?")
+    res = AskUserMessage(content="What is your name?", timeout=30).send()
     if res:
-        send_message(
-            content=f"Your name is: {res['content']}",
-        )
+        Message(
+            content=f"Your name is: {res['content']}.\nChainlit installation is working!\nYou can now start building your own chainlit apps!",
+        ).send()
 ```
-</RequestExample>
