--- a/api-reference/on-message.mdx
+++ b/api-reference/on-message.mdx
@@ -11,7 +11,8 @@ The decorated function is called every time a new message is received.
   The message coming from the UI.
 </ParamField>
 
-<RequestExample>
+### Usage
+
 ```python Code Example
 from chainlit import on_message
 
@@ -19,4 +20,3 @@ from chainlit import on_message
 def main(message: str):
   # do something
 ```
-</RequestExample>
