--- a/cloud/config.mdx
+++ b/cloud/config.mdx
@@ -34,16 +34,32 @@ hide_cot = false
 #request_limit = "10 per day"
 ```
 
-<Note>If you do not see that config file, run `chainlit init` at the root of your app.</Note>
+<Note>
+  If you do not see that config file, run `chainlit init` at the root of your
+  app.
+</Note>
 
 ## Adding your project ID
 
 In that file, under `[project]`, uncomment the id property and paste the project ID you obtained in the previous section:
+
 ```toml
 id = "test-MbHXZmUMAnxX"
 ```
 
+## Make your app private
+
+By setting the boolean `public` to `false`, you can make your app private. This means that users will need to authenticate as well as be a part of your team to use your app.
+
+{/\* <Warning>
+Currently, users will only be able to authenticate if your app is running on
+one of the following ports: `3000`, `5174` or `8000`.
+
+</Warning> */}
+
 ## Restart your app
+
 After restarting your app, and logging in if not already, you should see new elements in the ui:
+
 - The dataset tab, where you can find your persisted conversations
 - The user avatar, where you can logout
