--- a/concepts/chain-of-thought.mdx
+++ b/concepts/chain-of-thought.mdx
@@ -17,4 +17,4 @@ Chainlit simplifies this process by enabling you to visualize and navigate throu
 
 If you are using the [LangChain integration](/langchain), every intermediary step is automatically sent and displayed in the Chainlit UI.
 
-In Pure Python, you can use the `indent`, `prompt` and `llm_settings` parameters of the [send_message](/api-reference/send-message) function to display the intermediary steps.
+In Pure Python, you can use the `indent`, `prompt` and `llm_settings` parameters of the [Message](/api-reference/message) class to display the intermediary steps.
