--- a/examples/openai-sql.mdx
+++ b/examples/openai-sql.mdx
@@ -51,7 +51,7 @@ settings = {
 ## Listen and Reply
 
 Here, we decorate the `main` function with the [@on_message](/api-reference/on-message) decorator to tell Chainlit to run the `main` function each time a user sends a message.
-Then, we send back the answer to the UI with the [send_message](/api-reference/send-message) function.
+Then, we send back the answer to the UI with the [Message](/api-reference/message) class.
 
 ```python app.py
 @cl.on_message
@@ -64,12 +64,12 @@ def main(message: str):
     )
     content = response["choices"][0]["text"]
 
-    cl.send_message(
+    cl.Message(
         content=content,
         language="sql",
         prompt=fromatted_prompt,
         llm_settings=cl.LLMSettings(model_name=model_name, **settings)
-    )
+    ).send()
 ```
 
 ## Try it out
