fix pip install

--- a/examples/qa.mdx
+++ b/examples/qa.mdx
@@ -15,7 +15,7 @@ This example is inspired from the [LangChain doc](https://python.langchain.com/e
 This example has extra dependencies. You can install them with:
 
 ```bash
-pip install chromadb tiktoken openai
+pip install langchain chromadb tiktoken
 ```
 
 Then, you need to go to create an OpenAI key [here](https://platform.openai.com/account/api-keys) and get a SperpApi key [here](https://serpapi.com/).
