--- a/cloud/deploy.mdx
+++ b/cloud/deploy.mdx
@@ -3,3 +3,8 @@ title: Deploy
 ---
 
 <Note>Coming soon!</Note>
+
+
+## Self-host
+- on Fly.io: https://dev.to/willydouhard/how-to-deploy-your-chainlit-app-to-flyio-38ja
+- on Google Cloud: https://pseudohvr.medium.com/deploying-chainlit-on-gcp-72231ba6b77f 
