rename dataset tab to history

--- a/cloud/config.mdx
+++ b/cloud/config.mdx
@@ -55,5 +55,5 @@ By setting the boolean `public` to `false`, you can make your app private. This 
 
 After restarting your app, and logging in if not already, you should see new elements in the ui:
 
-- The dataset tab, where you can find your persisted conversations
+- The history tab, where you can find your persisted conversations
 - The user avatar, where you can logout
