fix parsing error

--- a/api-reference/ask/ask-for-file.mdx
+++ b/api-reference/ask/ask-for-file.mdx
@@ -12,7 +12,7 @@ If a project ID is configured, the messages will be uploaded to the cloud storag
   Text displayed above the upload button.
 </ParamField>
 <ParamField path="accept" type="Union[List[str], Dict[str, List[str]]]">
-  List of mime type to accept like ["text/csv", "application/pdf"] or a dict like {"text/plain": [".txt", ".py"]}.
+  List of mime type to accept like `["text/csv", "application/pdf"]` or a dict like `{"text/plain": [".txt", ".py"]}`.
   More infos here https://react-dropzone.org/#!/Accepting%20specific%20file%20types.
 </ParamField>
 <ParamField path="max_size_mb" type="int" optional>
